# sysd

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  fmt.sh  format.sh  info.c  info.h  pub  pub.c  sub  sub.c  sysd.c  sysd.conf  sysd.plist  sysd.service  sysdfuzzer.cc
fuzz/corpus/: fuzz_parse2.conf
libnet/: Makefile  net.c  net.h  pub.c  sub.c
libsysd/: config.h  info.h  net.h  system.h  utils.h
mcu/: Makefile  linker_script.ld  relay_test.c  stm.h
mcu/stm32g/: FOOBAR.S  Makefile  foobar.c  linker_script.ld  relay_test.c  stm.h  stm32g4.h
schematics/fan_control_circuit/: #auto_saved_files#  _autosave-fan_control_circuit.kicad_pcb  _autosave-fan_control_circuit.kicad_sch  fan_control_circuit.kicad_prl  fan_control_circuit.kicad_pro  fan_control_circuit.kicad_sch  fp-info-cache  my_piHAT_v1.kicad_sch  ~fan_control_circuit.kicad_sch.lck
sysd/: .sysd.c.swp  config.c  config.l  config.y  info.c  main.c  net.c  sysd.c  system.c  utils.c
sysd/network/: a.out  err_check  proto.c  proto.h  proto_check.c  proto_check.h  proto_pubsub.c  proto_pubsub.h  proto_queue.c  proto_queue.h  protocol.c  protocol.h  util.c
sysd/network/infer-out/: .infer_runstate.json  capture.db  capture.db-shm  capture.db-wal  logs  report.json  report.txt  results.db  results.db-shm  results.db-wal
sysd/network/infer-out/tmp/: clang_command_.tmp.2a7856.txt  clang_command_.tmp.d0a0a6.txt
tests/: CMakeLists.txt  test_serialize.cpp
